<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Tópico ➙ Busca por localizações: sintaxe e pontos mais próximos do usuário -->
    <LinearLayout
        style="@style/AppTheme.LinearLayoutWrapperBox">

        <TextView
            style="@style/AppTheme.TextViewTopicTitle"
            android:text="@string/busca_por_localizacoes_sintaxe_e_pontos_mais_proximos_do_usuario" />

        <Button
            style="@style/AppTheme.Button"
            android:onClick="buscaPorLocalizacoesSintaxeEPontosMaisProximosDoUsuario_Algoritmo_1"
            android:text="@string/algorithm" />
    </LinearLayout>


    <!-- Tópico ➙ Trabalhando o raio da busca por localização e pontos mais próximos -->
    <LinearLayout
        style="@style/AppTheme.LinearLayoutWrapperBox">

        <TextView
            style="@style/AppTheme.TextViewTopicTitle"
            android:text="@string/trabalhando_o_raio_da_busca_por_localizacao_e_pontos_mais_proximos" />

        <Button
            style="@style/AppTheme.Button"
            android:onClick="trabalhandoORaioDaBuscaPorLocalizacaoEPontosMaisProximos_Algoritmo_1"
            android:text="@string/algorithm" />
    </LinearLayout>


    <!-- Tópico ➙ Pontos mais próximos de uma latitude e longitude definidos -->
    <LinearLayout
        style="@style/AppTheme.LinearLayoutWrapperBox">

        <TextView
            style="@style/AppTheme.TextViewTopicTitle"
            android:text="@string/pontos_mais_proximos_de_uma_latitude_e_longitude_definidos" />

        <Button
            style="@style/AppTheme.Button"
            android:onClick="pontosMaisProximosDeUmaLatitudeELongitudeDefinidos_Algoritmo_1"
            android:text="@string/algorithm" />
    </LinearLayout>


    <!-- Tópico ➙ Busca por um local específico -->
    <LinearLayout
        style="@style/AppTheme.LinearLayoutWrapperBox">

        <TextView
            style="@style/AppTheme.TextViewTopicTitle"
            android:text="@string/busca_por_um_local_especifico" />

        <Button
            style="@style/AppTheme.Button"
            android:onClick="buscaPorUmLocalEspecifico_Algoritmo_1"
            android:text="@string/algorithm" />
    </LinearLayout>

    <ViewStub
        android:id="@+id/vs_content_section_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout="@layout/content_section_3" />
</LinearLayout>